# SVT-HEVC

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  NOTICES.md  README.md  STYLE.md  appveyor.yml  libsvt.pc.in  third_party_licenses.txt
Source/: CMakeLists.txt
Source/API/: EbApi.h  EbApi.version  EbApiSei.h  EbApiVersion.h.in  EbBuild.h  EbErrorCodes.h  EbTime.h  EbTypes.h
Source/App/: CMakeLists.txt  EbAppConfig.c  EbAppConfig.h  EbAppContext.c  EbAppContext.h  EbAppFifo.c  EbAppFifo.h  EbAppInputy4m.c  EbAppInputy4m.h  EbAppMain.c  EbAppProcessCmd.c  EbAppSei.c  EbAppString.c  EbAppString.h  EbAppTypes.h  EbTime.c  EbTime.h
Source/Lib/: CMakeLists.txt  pkg-config.pc.in
Source/Lib/ASM_AVX2/: CMakeLists.txt  EbCombinedAveragingSAD_Intrinsic_AVX2.c  EbCombinedAveragingSAD_Intrinsic_AVX2.h  EbCombinedAveragingSAD_Intrinsic_AVX512.c  EbCombinedAveragingSAD_Intrinsic_AVX512.h  EbComputeSAD_AVX2.h  EbComputeSAD_Intrinsic_AVX2.c  EbComputeSAD_SadLoopKernel_AVX512.c  EbComputeSAD_SadLoopKernel_AVX512.h  EbIntraPrediction_AVX2.h  EbIntraPrediction_Intrinsic_AVX2.c  EbMCP16bit_Intrinsic_AVX2.c  EbMcp_AVX2.h  EbMeSatdCalculation_AVX2.asm  EbMeSatdCalculation_AVX2.h  EbNoiseExtractAVX2.c  EbNoiseExtractAVX2.h  EbPackUnPack_Intrinsic_AVX2.c  EbPackUnPack_Intrinsic_AVX2.h  EbPictureOperators_AVX2.h  EbPictureOperators_Intrinsic_AVX2.c  EbTransforms_AVX2.h  EbTransforms_Intrinsic_AVX2.c  EbTransforms_Intrinsic_AVX512.c  EbTransforms_Intrinsic_VNNI.c  const-a.asm  x86inc.asm  x86util.asm
Source/Lib/ASM_SSE2/: CMakeLists.txt  EbApplySaoLcu16bit_Intrinsic_SSE2.c  EbAvcStyleMcp_Intrinsic_SSE2.c  EbAvcStyleMcp_SSE2.h  EbCombinedAveragingSAD_Intrinsic_SSE2.c  EbComputeMean_Intrinsic_SSE2.c  EbComputeMean_SSE2.h  EbComputeSAD_SSE2.h  EbDeblockingFilter_Intrinsic_SSE2.c  EbDeblockingFilter_SSE2.h  EbGatherSaoStatistics16bit_Intrinsic_SSE2.c  EbGatherSaoStatistics16bit_SSE2.asm  EbIntraPrediction16bit_Intrinsic_SSE2.c  EbIntraPrediction_Intrinsic_SSE2.c  EbIntraPrediction_SSE2.h  EbIntrinMacros16bit_SSE2.h  EbIntrinMacros_SSE2.h  EbInvTransform_Intrinsic_SSE2.c  EbMcp16bit_Intrinsic_SSE2.c  EbMcp_Intrinsic_SSE2.c  EbMcp_SSE2.h  EbMeSadCalculation_Intrinsic_SSE2.c  EbMeSadCalculation_SSE2.h  EbPackUnPack_Intrinsic_SSE2.c  EbPackUnPack_SSE2.h  EbPictureOperators_Intrinsic_SSE2.c  EbPictureOperators_SSE2.asm  EbPictureOperators_SSE2.h  EbSampleAdaptiveOffset_SSE2.h  EbSaoStatistics_Intrinsic_SSE2.c  EbTransforms_Intrinsic_SSE2.c  EbTransforms_SSE2.h  x64Macro.asm  x64RegisterUtil.asm  x64inc.asm
Source/Lib/ASM_SSE4_1/: CMakeLists.txt  EbIntraPrediction16bit_Intrinsic_SSE4_1.c  EbIntraPrediction_SSE4_1.h  EbPictureOperators_Intrinsic_SSE4_1.c  EbPictureOperators_SSE4_1.h  EbTransforms_Intrinsic_SSE4_1.c  EbTransforms_SSE4_1.h
Source/Lib/ASM_SSSE3/: CMakeLists.txt  EbAvcStyleMcp_Intrinsic_SSSE3.c  EbAvcStyleMcp_SSSE3.h  EbDeblockingFilter16bit_Intrinsic_SSSE3.c  EbDeblockingFilter_Intrinsic_SSSE3.c  EbDeblockingFilter_SSSE3.h  EbIntraPrediction16bit_Intrinsic_SSSE3.c  EbIntraPrediction_SSSE3.h  EbMcp_Intrinsic_AVX512.c  EbMcp_Intrinsic_AVX512VNNI.c  EbMcp_Intrinsic_SSSE3.c  EbMcp_SSSE3.h  EbSaoApplication_Intrinsic_SSSE3.c  EbSaoApplication_SSSE3.h  EbTransforms_Intrinsic_SSSE3.c  EbTransforms_SSSE3.h
Source/Lib/C_DEFAULT/: CMakeLists.txt  EbAvcStyleMcp_C.c  EbAvcStyleMcp_C.h  EbComputeMean_C.c  EbComputeMean_C.h  EbComputeSAD_C.c  EbComputeSAD_C.h  EbDeblockingFilter_C.c  EbDeblockingFilter_C.h  EbIntraPrediction_C.c  EbIntraPrediction_C.h  EbMcp_C.c  EbMcp_C.h  EbMeSadCalculation_C.c  EbMeSadCalculation_C.h  EbMeSatdCalculation_C.c  EbMeSatdCalculation_C.h  EbPackUnPack_C.c  EbPackUnPack_C.h  EbPictureOperators_C.c  EbPictureOperators_C.h  EbSampleAdaptiveOffset_C.c  EbSampleAdaptiveOffset_C.h  EbTransforms_C.c  EbTransforms_C.h
Source/Lib/Codec/: CMakeLists.txt  EbAdaptiveMotionVectorPrediction.c  EbAdaptiveMotionVectorPrediction.h  EbAvailability.c  EbAvailability.h  EbAvcStyleMcp.c  EbAvcStyleMcp.h  EbBitstreamUnit.c  EbBitstreamUnit.h  EbCabacContextModel.c  EbCabacContextModel.h  EbCodingLoop.c  EbCodingLoop.h  EbCodingUnit.c  EbCodingUnit.h  EbCoeffEstimation_Intrinsic.c  EbComputeMean.h  EbComputeSAD.h  EbDeblockingFilter.c  EbDeblockingFilter.h  EbDefinitions.h  EbEncDecProcess.c  EbEncDecProcess.h  EbEncDecResults.c  EbEncDecResults.h  EbEncDecSegments.c  EbEncDecSegments.h  EbEncDecTasks.c  EbEncDecTasks.h  EbEncHandle.c  EbEncHandle.h  EbEncodeContext.c  EbEncodeContext.h  EbEntropyCoding.c  EbEntropyCoding.h  EbEntropyCodingObject.h  EbEntropyCodingProcess.c  EbEntropyCodingProcess.h  EbEntropyCodingResults.c  EbEntropyCodingResults.h  (+127 more)
Source/Lib/SRM/: CMakeLists.txt  EbSystemResourceManager.c  EbSystemResourceManager.h  EbThreads.c  EbThreads.h
Source/Lib/System/: CMakeLists.txt  EbEncDecProcess.c  EbEncDecProcess.h  EbEncDecResults.h  EbEncDecSegments.h  EbEncHandle.c  EbEncHandle.h  EbEncodeContext.c  EbEncodeContext.h  EbEntropyCodingProcess.h  EbInitialRateControlProcess.c  EbInitialRateControlReorderQueue.h  EbInitialRateControlResults.h  EbModeDecisionConfigurationProcess.c  EbModeDecisionConfigurationProcess.h  EbModeDecisionProcess.c  EbModeDecisionSegments.h  EbMotionEstimationContext.h  EbMotionEstimationProcess.h  EbPacketizationProcess.c  EbPacketizationProcess.h  EbPacketizationReorderQueue.h  EbPictureAnalysisProcess.c  EbPictureAnalysisProcess.h  EbPictureAnalysisResults.c  EbPictureAnalysisResults.h  EbPictureControlSet.c  EbPictureControlSet.h  EbPictureDecisionProcess.c  EbPictureDecisionQueue.h  EbPictureDecisionReorderQueue.h  EbPictureDecisionResults.h  EbPictureManagerProcess.c  EbPictureManagerProcess.h  EbPictureManagerQueue.h  EbPictureManagerReorderQueue.h  EbRateControlProcess.c  (+12 more)
Source/SimpleApp/: CMakeLists.txt  EbAppConfig.h  EbAppContext.c  EbAppContext.h  EbAppMain.c  EbSimpleAppConfig.h  EbSimpleAppContext.c  EbSimpleAppContext.h  EbSimpleAppMain.c
gstreamer-plugin/: CMakeLists.txt  README.md  gstsvthevcenc.c  gstsvthevcenc.h  meson.build
gstreamer-plugin/git-patch/: 0001-svthevcenc-Add-svthevc-encoder-element.patch  README.txt
(+27 files in other folders)
